--- a/trunk/tech_blog_html/2013-03-18_cleanup-corrupt-partition-table.html
+++ b/trunk/tech_blog_html/2013-03-18_cleanup-corrupt-partition-table.html
@@ -65,28 +65,40 @@ Enter root password:</pre>
 <p>Run this command. Replace sdX with appropriate device id. You can list all devices by running 'fdisk -l'. For example if your flash drive is sdc you have to replace sdX with sdc.</p>
 <pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false; "># dd if=/dev/zero of=/dev/sdX bs=1 seek=446 count=64</pre>
 <p>This command wipes out the partition table but preserves the MBR. If you also want to wipe out your MBR too you'd like to run this</p>
-<pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false; "># dd if=/dev/zero of=/dev/sdX bs=1 count=512</pre>
-<p>Now create partition table, it requires root access. As we are using sdc for our example you should use according to your device id,</p>
+<pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false; "># dd if=/dev/zero of=/dev/sdX bs=512 count=1
+512+0 records in
+512+0 records out
+512 bytes (512 B) copied, 1.25339 s, 0.4 kB/s</pre>
+<p>At this point, device does not have a partition table. So we have to create one. Our next commands will require root access. As we are using sdc for our example device id of the USB drive. It is the third storage device connected to our system. First two hard disks connected to the system are sda and sdb. <strong>You should use proper device id in the command according to your device id,</strong> Let's see information on current partition table,</p>
+<pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false;"># parted /dev/sdc print
+Error: /dev/sdc: unrecognised disk label
+Model:  USB Disk (scsi)
+Disk /dev/sdc: 8054MB
+Sector size (logical/physical): 512B/512B
+Partition Table: unknown</pre>
+
+<p>Following commands will create an msdos partition table, will create an ext4 partition using the entire space available on the drive (usually desirable for USB flash drive of small size).</p>
 <pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false; "># parted /dev/sdc
 GNU Parted 3.1
 Using /dev/sdc
 Welcome to GNU Parted! Type 'help' to view a list of commands.
 
+(parted) mklabel msdos
 (parted) mkpart primary ext4 1 -1
-
+(parted) toggle 1 boot
 (parted) print                                                            
-Model: JetFlash Transcend 16GB (scsi)
-Disk /dev/sdc: 16.2GB
+Model:  USB Disk (scsi)
+Disk /dev/sdc: 8054MB
 Sector size (logical/physical): 512B/512B
 Partition Table: msdos
-Disk Flags: 
+Disk Flags:
 
 Number  Start   End     Size    Type     File system  Flags
- 1      1049kB  16.2GB  16.2GB  primary
+ 1      1049kB  8053MB  8052MB  primary               boot
 
 (parted) quit                                                             
-Information: You may need to update /etc/fstab.
-</pre>
+
+Information: You may need to update /etc/fstab.</pre>
 
 <div style="width: 300px; height: 250px; background: #252525; float: right; margin-left: 10px;">
 <!-- Post ad 01_medium -->
@@ -97,9 +109,12 @@ Information: You may need to update /etc/fstab.
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div>
-<p>It creates an ext4 primary partition starting from sector after mbr to the end. There is a way to pass commands with parted tool. For example, <strong>parted /dev/sdc print</strong> will execute directly. However, if use the command 'parted /dev/sdc mkpart primary ext4 1 -1' it won't work properly. While passing commands with parted -1 does not indicate ending sector. If you pass command with parted you must provide correct size in MegaBytes. Then it works fine.</p>
-<p>Let's format the partition now.</p>
-<pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false; "># mkfs -T ext4 /dev/sdX1</pre>
+
+<p>Second command provided to GNU Parted creates an ext4 primary partition starting from sector after mbr to the end. There is a way to pass commands with parted tool. For example, <strong>parted /dev/sdc print</strong> will print device information. These are like shortcut commands. However, regarding shortcut to the command 'parted /dev/sdc mkpart primary ext4 1 -1' we need to be careful. If use the command 'parted /dev/sdc mkpart primary ext4 1 -1' it won't work properly. Because while passing commands with parted -1 means different thing than ending sector. If you pass mkpart with parted you must provide correct size in MegaBytes instead of -1 which will work fine. Our third command passed to gparted sets bootable (active) flag to created partition so that it can be used to boot a OS.</p>
+<p>Let's format the partition now to create ext4 filesystem in it.</p>
+<pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false;"># mkfs -T ext4 /dev/sdX1</pre>
 <p>where sdX1 should be replaced by sdc1 (which means the first partition on drive sdc) if your flash drive is sdc</p>
 <p>Optionally, you can apply a label to the filesystem, it is used by the OS during automount target</p>
-<pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false; "># e2label /dev/sdX1 DataDisk</pre>
+<pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false; "># e2label /dev/sdX1 My_Linux_USB_Drive
+Warning: label too long, truncating.</pre>
+<p>When label is too long it truncates.</p>
