--- a/trunk/tech_blog_html/2011-12-11_Script-to-Show-Volume-Information-and-Remaining-Date-and-Time-for-Expiry-of-BanglaLion-Connection.html
+++ b/trunk/tech_blog_html/2011-12-11_Script-to-Show-Volume-Information-and-Remaining-Date-and-Time-for-Expiry-of-BanglaLion-Connection.html
@@ -15,14 +15,14 @@ Remaining days: 3</pre>
 <ol>
 <li>username</li>
 <li>password</li>
-<li>whether prepaid or not</li>
+<li>whether it is prepaid package or not</li>
 </ol>
-<p>Hence a call to this function is like this:</p>
+<p>Hence a call to this function in a powershell script looks like this:</p>
 <pre class="brush: plain;">ShowBanglaLionInfo "bclnw.60110" "123456" $true</pre>
-<p>Please use your own username and password. Otherwise script will not work. If your connection is postpaid call the function like this</p>
+<p>Please use correct username and password. Otherwise, script does not work. If your connection is postpaid call the function like this,</p>
 <pre class="brush: plain;">ShowBanglaLionInfo "bclnw.60110" "123456" $false</pre>
-<div>As you can understand last argument means whether modem is prepaid or not. Function DownloadHttpFilebyPostData is used to post login information by <span class="Apple-style-span" style="white-space: pre;">ShowBanglaLionInfo function.</span></div>
-<p><span class="Apple-style-span" style="white-space: pre;">Function </span><span class="Apple-style-span" style="white-space: pre;">ShowBanglaLionInfo looks like this:</span></p>
+<p>As you can understand last argument means whether modem is prepaid or not. Function DownloadHttpFilebyPostData is used to post login information by <strong>ShowBanglaLionInfo</strong> function.</p>
+<p>Function <strong>ShowBanglaLionInfo</strong> looks like this:</p>
 <pre class="brush: ps; first-line: 1; tab-size: 5; toolbar: false;"># Date  : 06/14/2011 11:58:47
 # Author: Saint Atique
 # Desc  : Show BanglaLion Connection Info
@@ -120,7 +120,7 @@ function ShowBanglaLionInfo([string] $userName, [string] $passWord, [bool]$isPre
     if (Test-Path $outputFilePath) { rm $outputFilePath }
 }
 </pre>
-<p><span class="Apple-style-span" style="white-space: pre;">Here is the function to post data to a URL and return the page:</span></p>
+<p>Here is the function to post data to a URL and return the page:</p>
 <pre class="brush: ps; first-line: 1; tab-size: 5; toolbar: false;"># Date  : 06/14/2011 11:58:47
 # Author: Saint Atique
 # msxml trick is from microsoft's documentation
@@ -282,6 +282,6 @@ function DownloadHttpFilebyPostData([string]$url, [string]$parameters) {
  
 Main</pre>
 
-Save it on a file and call from powershell to automate viewing info of Banglalion.
-
-Update (r2) - July 01, 2014</p>
+<p>Save it on a file and call from powershell to automate viewing info of Banglalion.</p>
+<br />
+<p>Update (r3) - July 01, 2014</p>
