Revised post on building Mozilla Firefox from source and added one more image, Updated Windows Phone article Corrected file name for article - creating live media Added codeproject on this repo and     added first article first revision added second article first revision and files added third article first revision and images

--- a/tech_blog_html/2014-07-01_Creating Live USB Media of Fedora, RHEL and Cent-OS using Linux and Windows.html
+++ b/tech_blog_html/2014-07-01_Creating Live USB Media of Fedora, RHEL and Cent-OS using Linux and Windows.html
@@ -277,7 +277,7 @@ Cleaning up to exit...</pre>
 <pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false;">livecd-iso-to-disk --format --msdos --reset-mbr ~/Downloads/Fedora-20-x86_64-Live-Desktop.iso /dev/sdc</pre>
 
 <h4>Using livecd-tools to create UEFI bootable USB Stick</h4>
-<p>If the OS in ISO supports persistent storage then you can enable persistent storage depending on space available on the USB storage device. Following command prepares a Live USB Media with 1 GB persistent storage.</p>
+<p>You need fat32 partition for EFI compatible bootable media. Directory structure changes too. Following command takes care of all of this,</p>
 <pre class="brush: bash; first-line: 1; tab-size: 5; toolbar: false;"># livecd-iso-to-disk --format --reset-mbr --efi ~/Downloads/Fedora-Live-Desktop-x86_64-20-1.iso</pre>
 
 <h4>Using livecd-tools to create Live USB Media with persistent storage</h4>
